# test-axios2c-sign-server

./: .clangd  .gitattributes  .gitignore  AUTOTOOLS.md  Makefile.am  README.md  README.ubuntu.md  README.windows.md  configure.ac  readme.md
scripts/: README.md  README.ubuntu.md  README.windows.md  build.py  build.sh  clean.py  clean.sh  openvsx_download_vsix.py  proxy.cfg  run.py  run.sh  vscodium_common.py  vscodium_desktop_download.py  vscodium_desktop_export_extensions.py  vscodium_desktop_install_vsix.py  vscodium_install_extensions_from_list.py  vscodium_server_download.py  vscodium_server_export_extensions.py  vscodium_server_install_vsix.py
scripts/linux/: _invoke_python.cmd  _vscodium_server_common.sh  download-extensions.cmd  download-extensions.sh  download-vscodium-server.cmd  install-extensions-from-list.sh  install-vscodium-server-extensions.sh  vscodium-desktop-install-from-list.sh  vscodium-server-download-vsix.sh  vscodium-server-download.cmd  vscodium-server-download.sh  vscodium-server-export-extensions.sh  vscodium-server-install-from-list.cmd  vscodium-server-install-from-list.sh  vscodium-server-install-vsix.sh
scripts/windows/: _invoke_python.cmd  download-extensions.cmd  download-extensions.ps1  download-vscodium.cmd  download-vscodium.ps1  export-extensions.cmd  export-extensions.ps1  install-extensions-from-list.cmd  install-extensions.cmd  install-extensions.ps1  vscodium-desktop-download.cmd  vscodium-desktop-export-extensions.cmd  vscodium-desktop-install-from-list.cmd  vscodium-desktop-install-vsix.cmd  vscodium-server-download.cmd  vscodium-server-export-extensions.cmd  vscodium-server-install-from-list.cmd  vscodium-server-install-vsix.cmd
source/backend/axis2_repo/: axis2.xml
source/backend/include/: Makefile.am  demoposix.h  demosign.h
source/backend/services/: Makefile.am
source/backend/services/demo_sign/: Makefile.am  demo_sign_skeleton.c  demo_sign_svc.c  demo_sign_svc.h  services.xml
source/backend/src/: Makefile.am  demoposix.c  demosign.c  main.c
source/frontend/client/: Makefile.am  demo.py
tech.md/: 01-axis2c-essentials.md  02-repo-services.md  03-navigation.md  04-codestyle.md  README.md  README.ubuntu.md  README.windows.md  environment.md  environment.ubuntu.md  environment.windows.md  nginx-reverse-proxy-example.md  nginx-reverse-proxy-example.ubuntu.md  nginx-reverse-proxy-example.windows.md
