SUBDIRS = source/backend/include source/backend/services source/backend/src

EXTRA_DIST = source/backend/axis2_repo scripts/build.sh scripts/clean.sh scripts/run.sh \
  scripts/windows/download-extensions.ps1 scripts/windows/download-vscodium.ps1 \
  scripts/windows/export-extensions.ps1 scripts/windows/install-extensions.ps1 \
  scripts/linux/vscodium-server-download-vsix.sh scripts/linux/vscodium-server-download.sh \
  scripts/linux/vscodium-server-export-extensions.sh scripts/linux/vscodium-server-install-vsix.sh \
  .clangd AUTOTOOLS.md tech.md source/frontend
