SUBDIRS = source/backend/include source/backend/services source/backend/src

EXTRA_DIST = .gitattributes source/backend/axis2_repo \
  scripts/build.py scripts/clean.py scripts/run.py \
  scripts/vscodium_common.py \
  scripts/openvsx_download_vsix.py \
  scripts/vscodium_desktop_download.py \
  scripts/vscodium_desktop_export_extensions.py \
  scripts/vscodium_desktop_install_vsix.py \
  scripts/vscodium_server_download.py \
  scripts/vscodium_server_export_extensions.py \
  scripts/vscodium_server_install_vsix.py \
  scripts/windows/vscodium-extensions.txt \
  scripts/windows/_invoke_python.cmd \
  scripts/windows/download-extensions.cmd \
  scripts/windows/download-vscodium.cmd \
  scripts/windows/export-extensions.cmd \
  scripts/windows/install-extensions.cmd \
  scripts/windows/vscodium-server-download.cmd \
  scripts/windows/vscodium-server-export-extensions.cmd \
  scripts/windows/vscodium-server-install-vsix.cmd \
  scripts/linux/_invoke_python.cmd \
  scripts/linux/_vscodium_server_common.sh \
  scripts/linux/download-vscodium-server.cmd \
  scripts/linux/download-vscodium-server.sh \
  scripts/linux/download-extensions.cmd \
  scripts/linux/download-extensions.sh \
  scripts/linux/export-vscodium-server-extensions.sh \
  scripts/linux/install-vscodium-server-extensions.sh \
  scripts/linux/vscodium-extensions.txt \
  scripts/README.md \
  .clangd AUTOTOOLS.md tech.md source/frontend
