SUBDIRS = source/backend/include source/backend/services source/backend/src

EXTRA_DIST = .gitattributes source/backend/axis2_repo \
  scripts/build.sh scripts/clean.sh scripts/run.sh \
  scripts/vscodium_common.py \
  scripts/proxy.cfg \
  scripts/openvsx_download_vsix.py \
  scripts/vscodium_install_extensions_from_list.py \
  scripts/vscodium_desktop_download.py \
  scripts/vscodium_desktop_export_extensions.py \
  scripts/vscodium_desktop_install_vsix.py \
  scripts/vscodium_server_download.py \
  scripts/vscodium_server_export_extensions.py \
  scripts/vscodium_server_install_vsix.py \
  scripts/windows/vscodium-extensions.txt \
  scripts/windows/_invoke_python.cmd \
  scripts/windows/download-extensions.cmd \
  scripts/windows/vscodium-desktop-download.cmd \
  scripts/windows/vscodium-desktop-export-extensions.cmd \
  scripts/windows/vscodium-desktop-install-vsix.cmd \
  scripts/windows/vscodium-desktop-install-from-list.cmd \
  scripts/windows/vscodium-server-install-from-list.cmd \
  scripts/windows/vscodium-server-download.cmd \
  scripts/windows/vscodium-server-export-extensions.cmd \
  scripts/windows/vscodium-server-install-vsix.cmd \
  scripts/linux/_invoke_python.cmd \
  scripts/linux/_vscodium_server_common.sh \
  scripts/linux/vscodium-server-download.cmd \
  scripts/linux/vscodium-server-download.sh \
  scripts/linux/download-extensions.cmd \
  scripts/linux/vscodium-server-install-from-list.cmd \
  scripts/linux/download-extensions.sh \
  scripts/linux/vscodium-server-install-from-list.sh \
  scripts/linux/vscodium-desktop-install-from-list.sh \
  scripts/linux/vscodium-server-export-extensions.sh \
  scripts/linux/vscodium-server-install-vsix.sh \
  scripts/linux/vscodium-extensions.txt \
  scripts/README.md \
  .clangd AUTOTOOLS.md tech.md source/frontend
